--- a/src/templates/mainLayout.html
+++ b/src/templates/mainLayout.html
@@ -14,20 +14,29 @@
   <nav>
     <div class="nav-wrapper">
       <ul class="left">
-        <li><a href="sass.html">Competitions</a></li>
-        <li><a href="sass.html">Leaderboards</a></li>
+        <li><a href="/">Competitions</a></li>
+        <li><a href="/leaderboards_page">Leaderboards</a></li>
         {% if data.user %}
-          <li><a href="badges.html">Account</a></li>
+          <li><a href="/profile_page">Account</a></li>
+          <li><a id="logout_btn">Logout</a></li>
         {% else %}
-          <li><a href="badges.html">Login</a></li>
+          <li><a href="/login_page">Login</a></li>
         {% endif %}
       </ul>
     </div>
   </nav>
 
+  <script>
+    const btn = document.querySelector("#logout_btn");
+    if(btn) {
+      btn.addEventListener("click",async () => {
+        await req("/api/logout", {});
+        window.location.href = "/"
+      })
+    }
+  </script>
 
-
-  <div id="content">{% block content %}{% endblock %}</div>
+  <div id="content" style="display: flex;">{% block content %}{% endblock %}</div>
 
 </body>
 
